[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cipher-gateway"
version = "1.0.0"
description = "Python SDK for the Cipher MT5 Gateway — self-hosted MT5 trading infrastructure"
readme = "README.md"
license = { text = "Proprietary" }
authors = [
    { name = "CipherBridge", email = "dev@cipherbridge.cloud" }
]
requires-python = ">=3.10"
keywords = ["mt5", "metatrader", "trading", "forex", "gateway", "cipher"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24.0",
    "websockets>=11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",          # httpx mock
]

[project.urls]
Homepage   = "https://cipherbridge.cloud"
Repository = "https://github.com/cipher-suite/cipher-gateway-python"
"Bug Tracker" = "https://github.com/cipher-suite/cipher-gateway-python/issues"

[tool.setuptools.packages.find]
# Only ship the cipher_gateway package — not tests, scripts, or examples
include = ["cipher_gateway*"]

[tool.setuptools.package-data]
# py.typed marks the package as PEP 561 typed — IDEs will use inline type hints
cipher_gateway = ["py.typed"]