[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tonpo"
version = "1.0.6"
description = "Python SDK for integrating with Tonpo Gateway, enabling secure access to MetaTrader 5 trading services."
readme = "README.md"
license = { text = "Proprietary" }
authors = [
    { name = "TonpoLabs", email = "carbon-crumb-churn@duck.com" }
]
requires-python = ">=3.10"
keywords = ["mt5", "metatrader", "trading", "forex", "gateway", "tonpo"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24.0",
    "websockets>=11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",          # httpx mock
]

[project.urls]
Homepage   = "https://cipherbridge.cloud"
Repository = "https://github.com/TonpoLabs/tonpo-py"
"Bug Tracker" = "https://github.com/TonpoLabs/tonpo-py/issues"

[tool.setuptools.packages.find]
# Only ship the tonpo package — not tests, scripts, or examples
include = ["tonpo*"]

[tool.setuptools.package-data]
# py.typed marks the package as PEP 561 typed — IDEs will use inline type hints
tonpo = ["py.typed"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]   # errors, pyflakes, warnings, imports

[tool.mypy]
python_version = "3.10"
strict = true